--- a/install
+++ b/install
@@ -30,16 +30,16 @@ fi
 pypip="$(python3 -m pip --version 2>&1)"
 
 # Extract the potential "not found" message
-err="$(echo $pypip | cut -d ' ' -f 5-)"
+err="$(echo $pypip | cut -d ' ' -f 2-)"
 
 # If pip inst't installed, check for python module
-if [ "$err" = "not found" ];then
+if [ "$err" = "No module named pip" ];then
     # Get/extract pip version (in case pip module is installed but pip isn't)
     pip="$(pip3 --version)"
     piperr="$(echo $pip | cut -d ' ' -f 5-)"
     
     # If neither version is found, exit
-    if [ "$pyerr" == "not found" ]; then
+    if [ "$piperr" = "not found" ]; then
         echo "Pip not found; install pip and run again."
         exit 1
     else
