--- a/install
+++ b/install
@@ -45,7 +45,7 @@ if [ "$err" != "pip" ];then
     else
         # Otherwise install modules through pip
         echo "Installing python modules through pip..."
-        sudo pip3 install -q beautifulsoup4 requests lxml
+        sudo pip install -q beautifulsoup4 requests lxml
     fi
 else
     # Install through pip if available
