Added daemonization; updated README

--- a/install
+++ b/install
@@ -45,12 +45,12 @@ if [ "$err" != "pip" ];then
     else
         # Otherwise install modules through pip
         echo "Installing python modules through pip..."
-        sudo pip install -q beautifulsoup4 requests lxml
+        sudo pip install -q beautifulsoup4 requests lxml daemonize
     fi
 else
     # Install through pip if available
     echo "Installing python modules through pip module..."
-    sudo python3 -m pip install -q beautifulsoup4 requests lxml
+    sudo python3 -m pip install -q beautifulsoup4 requests lxml daemonize
 fi
 
 # If direcory doesn't already exist create directory
